# cxfinance

./: .gitignore  Cargo.toml
src/: config.rs  database.rs  import.rs  main.rs  parser.rs  pattern.rs  query.rs  transaction.rs  tui.rs
