[package]
name = "cxfinance"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cxrvus/cxfinance"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
